# FastAPI-starter

./: README.md  pyproject.toml
src/: main.py  todos.sqlite3
src/config/: db.py
src/controllers/: auth.py  routes.py  todos.py
src/middlewares/: auth.py  saml2.py
src/models/: __init__.py  todo.py
